Fixed: IE8 vertical-align in thread_list.php

--- a/forum/styles/make_style.css
+++ b/forum/styles/make_style.css
@@ -15,7 +15,7 @@ form {
 }
 
 img {
-    vertical-align: text-top;
+    vertical-align: middle;
 }
 
 frameset {
